--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ vaadin.whitelisted-packages=com.vaadin,org.vaadin,dev.hilla,com.example.applicat
 spring.security.oauth2.client.registration.keycloak.client-id=vaadin
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.keycloak.scope=openid
-spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8180/realms/vaadin
+spring.security.oauth2.client.provider.keycloak.issuer-uri=https://keykloak.dbuss.de:8444/realms/vaadin
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
